--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-babel==2.17.0
-matplotlib==3.10.1
-numpy==2.2.3
-pandas==2.2.3
-seaborn==0.13.2
-streamlit==1.42.2
+babel
+matplotlib
+numpy
+pandas
+seaborn
+streamlit
+plotly
