--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-babel
-matplotlib
-numpy
-pandas
-seaborn
-streamlit
-plotly
+babel==2.17.0
+matplotlib==3.7.1
+numpy==1.25.2
+pandas==2.0.3
+seaborn==0.12.2
+streamlit==1.25.0
+plotly==5.15.0
