--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-babel==2.17.0
-matplotlib==3.7.1
-numpy==1.25.2
-pandas==2.0.3
-seaborn==0.12.2
-streamlit==1.25.0
-plotly==5.15.0
+numpy
+pandas
+matplotlib.pyplot
+seaborn
+streamlit
+plotly.express
